--- a/frontend/src/Style.css
+++ b/frontend/src/Style.css
@@ -1,9 +1,10 @@
 .App {
   text-align: justify;
-  background-color:grey;
+  
 }
 
-.App-header {
+
+/*.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -16,8 +17,9 @@
 
 .App-link {
   color: #09d3ac;
+}*/
+
+body {
+  background-color: mediumpurple!important;
 }
 
-.Content-Card {
-  background-color:white;
-}
