--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,6 @@
   
 }
 
-
 /*.App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -13,13 +12,38 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
+}*/
 
 .App-link {
   color: #09d3ac;
-}*/
+}
 
 body {
   background-color: mediumpurple!important;
 }
+
+.page-header {
+  text-align: center;
+  background-color:orange!important;
+  
+}
+
+.div-widget1 {
+  position: relative;
+  
+  margin:150px auto 0;
+  left:50px;
+  width: 900px;
+}
+
+.div-widget2 {
+  position: relative;
+  
+  margin:150px auto 0;
+  left:50px;
+  width: 900px;
+}
+
+
+
 
